# mp1-analise-empirica

./: .gitignore  CMakeLists.txt  README.md  benchmark_random.c  benchmarks.c  main.c
aluno/: algoritmos.c  gera_instancias.c
ordenacao/: algoritmos.c  algoritmos.h  gera_instancias.c  gera_instancias.h
